2020-10-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: Set the "icon-name" property of the
	GtkCellRendererPixbufs instead of the "pixbuf" property.

	* src/balsa-index.c (balsa_index_init): set the "icon-name" property;
	* src/balsa-icons.c (balsa_register_pixbufs):
	    register the address-view icons by name instead of pixbuf.
	* libbalsa/mailbox.c (mailbox_model_init): the status and
	    attachment columns are now strings, not pixbufs;
	  (mailbox_model_get_value): ditto;
	  (libbalsa_mailbox_set_unread_icon), (libbalsa_mailbox_set_trash_icon),
	  (libbalsa_mailbox_set_flagged_icon), (libbalsa_mailbox_set_replied_icon),
	  (libbalsa_mailbox_set_attach_icon), (libbalsa_mailbox_set_good_icon),
	  (libbalsa_mailbox_set_notrust_icon), (libbalsa_mailbox_set_bad_icon),
	  (libbalsa_mailbox_set_sign_icon), (libbalsa_mailbox_set_encr_icon):
	    the parameter is a string, not a pixbuf;
	* libbalsa/mailbox.h: ditto.

2020-10-17  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Address-view: Set the "icon-name" property of the
	GtkCellRendererPixbufs instead of the "pixbuf" property.

	* libbalsa/address-view.c (lbav_button_activated), (libbalsa_address_view_new):
	  the icon column is now G_TYPE_STRING instead of GDK_TYPE_PIXBUF;
	(libbalsa_address_view_set_book_icon),
	(libbalsa_address_view_set_close_icon),
	(libbalsa_address_view_set_drop_down_icon): the parameter is a
	  string, not a pixbuf;
	* libbalsa/address-view.h: ditto;
	* src/balsa-icons.c (balsa_register_pixmaps),
	(balsa_register_pixbufs): register the address-view icons by name instead of pixbuf.

2020-09-23  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove LibBalsaCellRendererButton

	We only needed it to capture clicks, which we can do with
	GtkTreeView's "row-activated" signal.

	* libbalsa/cell-renderer-button.c: removed;
	* libbalsa/cell-renderer-button.h: removed;
	* libbalsa/address-view.c: use "row-activated" instead.
