@@ -93,6 +93,6 @@
 
 void balsa_register_pixmaps(void);
 void balsa_unregister_pixmaps(void);
-void balsa_register_pixbufs(GtkWidget * widget);
+void balsa_register_icon_names(void);
 const gchar * balsa_icon_id(const gchar * name);
 #endif
